argocd/infra/harbor/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-http-route
spec:
  parentRefs:
    - name: cilium-private-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - harbor.yanello.net
  rules:
    - backendRefs:
        - name: harbor-server
          group: ""
          kind: Service
          namespace: harbor
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
